<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011 Senseless Solutions 
 *
 * Licensed under the GNU General Public License, Version 3.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at 
 *
 *      http://www.gnu.org/licenses/gpl-3.0.html
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 * 
 * Weight Chart is free software: you can redistribute it and/or
 * modify it under the terms of the GNU General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 * 
 * Modified Source code: http://code.google.com/p/weight-chart/
 * Original Source code: http://fredrik.jemla.eu/weightchart
 */
-->
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
      android:entries="@array/weight_unit_labels"
      android:entryValues="@array/weight_unit_values"
      android:key="weight_unit"
      android:title="@string/weight_unit"/>
    <Preference
      android:key="height"
      android:title="@string/height"/>
      
    <PreferenceCategory
      android:title="@string/watch_weight">
      <Preference
        android:key="weight_goal"
        android:title="@string/weight_goal"/>
      <Preference
        android:key="weight_max"
        android:title="@string/weight_max"/>
    </PreferenceCategory>
    <PreferenceCategory
      android:title="@string/about_weight_chart">
        <Preference
          android:key="website"
          android:summary="@string/website_url"
          android:title="@string/website"/>
        <Preference
          android:key="license"
          android:summary="@string/license_summary"
          android:title="@string/free_software_license"/>
        <Preference
          android:key="market"
          android:summary="@string/market_url"
          android:title="@string/market"/>
        <Preference
          android:key="market_author"
          android:summary="@string/market_url_author"
          android:title="@string/market_author"/>
        <Preference
          android:key="about"
          android:summary="@string/about_wc_summary"
          android:title="@string/about_wc"/>
        <Preference
          android:key="translate"
          android:summary="@string/translate_summary"
          android:title="@string/translate"/>

    </PreferenceCategory>
</PreferenceScreen>
