<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011 Senseless Solutions 
 *
 * Licensed under the GNU General Public License, Version 3.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at 
 *
 *      http://www.gnu.org/licenses/gpl-3.0.html
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 * 
 * Weight Chart is free software: you can redistribute it and/or
 * modify it under the terms of the GNU General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 * 
 * Modified Source code: http://code.google.com/p/weight-chart/
 * Original Source code: http://fredrik.jemla.eu/weightchart
 */

-->

<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:paddingLeft="8dip"
      android:paddingRight="8dip">
        <TextView
          android:text="@string/height_unit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <Spinner
          android:id="@+id/height_unit"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
        <TextView
          android:text="@string/height_input"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <LinearLayout
          android:id="@+id/cm_input"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content">
	    <EditText
              android:id="@+id/cm"
              android:layout_width="96sp"
              android:layout_height="wrap_content"
              android:numeric="integer"/>
            <TextView
              android:text="@string/cm"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
	</LinearLayout>
        <LinearLayout
          android:id="@+id/ft_input"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content">
            <EditText
              android:id="@+id/ft"
              android:layout_width="96sp"
              android:layout_height="wrap_content"
              android:numeric="integer"/>
            <TextView
              android:text="@string/ft"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
            <EditText
              android:id="@+id/in"
              android:layout_width="96sp"
              android:layout_height="wrap_content"
              android:numeric="integer"/>
            <TextView
              android:text="@string/in"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
