<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011 Senseless Solutions 
 *
 * Licensed under the GNU General Public License, Version 3.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at 
 *
 *      http://www.gnu.org/licenses/gpl-3.0.html
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 * 
 * Weight Chart is free software: you can redistribute it and/or
 * modify it under the terms of the GNU General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 * 
 * Modified Source code: http://code.google.com/p/weight-chart/
 * Original Source code: http://fredrik.jemla.eu/weightchart
 */

-->
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:padding="8dip">
        <TextView
          android:text="@string/file_input"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <EditText
          android:id="@+id/file"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
        <TextView
          android:text="@string/size_input"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content">
            <EditText
              android:id="@+id/size_x"
              android:layout_width="96sp"
              android:layout_height="wrap_content"
              android:numeric="integer"/>
            <TextView
              android:text="×"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
            <EditText
              android:id="@+id/size_y"
              android:layout_width="96sp"
              android:layout_height="wrap_content"
              android:numeric="integer"/>
        </LinearLayout>
	<TextView
          android:text="@string/end_date_input"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <Button
          android:id="@+id/end_date"
          android:layout_width="128sp"
          android:layout_height="wrap_content"/>
        <TextView
          android:text="@string/days_input"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <EditText
          android:id="@+id/days"
          android:layout_width="96sp"
          android:layout_height="wrap_content"
          android:numeric="integer"/>
        <CheckBox
          android:id="@+id/transparency"
          android:text="@string/transparency"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
